# text-to-speech

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  dprint.json  flake.nix  install.ps1  install.sh  lefthook.yml  pyproject.toml  uninstall.ps1  uninstall.sh
.claude/: settings.json
.claude/skills/commits/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
docs/: fish-audio.md
fish_audio/: README.md
fish_audio/scripts/: upload_samples.py
samples/: en_1.txt  en_2.txt  en_3.txt  en_4.txt  en_5.txt  en_6.txt  es_1.txt  es_2.txt  es_3.txt  es_4.txt  es_5.txt  es_6.txt
src/tts/: __init__.py  __main__.py  cli.py  common.py  config.py
src/tts/commands/: configure.py  generate.py  update.py  voice.py
tests/: conftest.py  test_cli.py  test_common.py  test_config.py  test_configure.py  test_generate.py  test_update.py  test_voice.py
tts/: README.md
tts/scripts/: generate.py
voice_cloning/: README.md
voice_cloning/scripts/: upload_samples.py
